[gd_scene load_steps=8 format=3 uid="uid://cu1oiwt353ycd"]

[ext_resource type="Script" path="res://FPS/Scripts/player.gd" id="1_gjo2e"]
[ext_resource type="Script" path="res://FPS/Scripts/bobbing.gd" id="2_lpiwy"]
[ext_resource type="Script" path="res://FPS/Scripts/interaction.gd" id="3_d4n4i"]
[ext_resource type="Texture2D" uid="uid://8h2xvo6d3xoi" path="res://FPS/Crosshair/Crosshair 3.png" id="4_jkghp"]
[ext_resource type="Script" path="res://FPS/Scripts/ui_control.gd" id="4_ld81f"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_7kcx2"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_nk75x"]

[node name="Player" type="CharacterBody3D"]
script = ExtResource("1_gjo2e")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
visible = false
mesh = SubResource("CapsuleMesh_7kcx2")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_nk75x")

[node name="TwistPivot" type="Node3D" parent="."]

[node name="PitchPivot" type="Node3D" parent="TwistPivot"]

[node name="CameraBobbing" type="Node3D" parent="TwistPivot/PitchPivot"]
script = ExtResource("2_lpiwy")

[node name="Camera3D" type="Camera3D" parent="TwistPivot/PitchPivot/CameraBobbing"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
current = true

[node name="RayCast3D" type="RayCast3D" parent="TwistPivot/PitchPivot/CameraBobbing/Camera3D"]
target_position = Vector3(0, 0, -3.5)
script = ExtResource("3_d4n4i")

[node name="PlayerInterface" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("4_ld81f")

[node name="Crosshair" type="TextureRect" parent="PlayerInterface"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -5.0
offset_top = -5.0
offset_right = 5.0
offset_bottom = 5.0
grow_horizontal = 2
grow_vertical = 2
mouse_force_pass_scroll_events = false
texture = ExtResource("4_jkghp")
expand_mode = 1

[node name="PromptText" type="Label" parent="PlayerInterface"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 15.0
offset_top = -11.0
offset_right = 120.0
offset_bottom = 12.0
grow_horizontal = 2
grow_vertical = 2
text = "Door e"

[node name="ControlText" type="Label" parent="PlayerInterface"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -23.0
offset_right = 105.0
grow_vertical = 0
text = "[TAB] / [BACK] TO SHOW CONTROLS"

[node name="ControlGuidePanel" type="Panel" parent="PlayerInterface"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 175.0
offset_top = 150.0
offset_right = -156.0
offset_bottom = -130.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Control Guide" type="Label" parent="PlayerInterface/ControlGuidePanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -396.5
offset_top = -169.0
offset_right = -266.5
offset_bottom = -146.0
grow_horizontal = 2
grow_vertical = 2
text = "CONTROL GUIDE"

[node name="GridContainer" type="GridContainer" parent="PlayerInterface/ControlGuidePanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -296.5
offset_top = -111.0
offset_right = 297.5
offset_bottom = 143.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/h_separation = 120
columns = 3

[node name="Action Text" type="Label" parent="PlayerInterface/ControlGuidePanel/GridContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "ACTIONS

MOVE
ROTATE
JUMP
SPRINT
INTERACT
NOCLIP
EXIT"
horizontal_alignment = 1

[node name="Pc Control" type="Label" parent="PlayerInterface/ControlGuidePanel/GridContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "PC

WASD
MOUSE
SPACE
WASD + LEFT SHIFT
E
N
ESC"
horizontal_alignment = 1

[node name="Controller Control" type="Label" parent="PlayerInterface/ControlGuidePanel/GridContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "CONTROLLER

LEFT STICK
RIGHT STICK
A
WASD + LEFT STICK CLICK
X
Y
START"
horizontal_alignment = 1
